Fix rest communication between order and products service - not working order post method