@@ -3,19 +3,18 @@ package pl.bielamarcin.ordersservice.service;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import pl.bielamarcin.ordersservice.dto.OrderDTO;
-import pl.bielamarcin.ordersservice.dto.OrderItemDTO;
 import pl.bielamarcin.ordersservice.dto.ProductDTO;
 import pl.bielamarcin.ordersservice.exception.OrderNotFoundException;
-import pl.bielamarcin.ordersservice.mapper.OrderMapper;
 import pl.bielamarcin.ordersservice.mapper.OrderItemMapper;
+import pl.bielamarcin.ordersservice.mapper.OrderMapper;
 import pl.bielamarcin.ordersservice.model.Order;
 import pl.bielamarcin.ordersservice.model.OrderItem;
-import pl.bielamarcin.ordersservice.repository.OrderRepository;
 import pl.bielamarcin.ordersservice.repository.OrderItemRepository;
-import pl.bielamarcin.ordersservice.service.ProductServiceClient;
+import pl.bielamarcin.ordersservice.repository.OrderRepository;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -26,15 +25,15 @@ public class OrderService {
     private final OrderItemRepository orderItemRepository;
     private final OrderMapper orderMapper;
     private final OrderItemMapper orderItemMapper;
-
-    private ProductServiceClient productServiceClient;
+    private final ProductServiceClient productServiceClient;
 
     @Autowired
-    public OrderService(OrderRepository orderRepository, OrderItemRepository orderItemRepository, OrderMapper orderMapper, OrderItemMapper orderItemMapper) {
+    public OrderService(OrderRepository orderRepository, OrderItemRepository orderItemRepository, OrderMapper orderMapper, OrderItemMapper orderItemMapper, ProductServiceClient productServiceClient) {
         this.orderRepository = orderRepository;
         this.orderItemRepository = orderItemRepository;
         this.orderMapper = orderMapper;
         this.orderItemMapper = orderItemMapper;
+        this.productServiceClient = productServiceClient;
     }
 
     public List<OrderDTO> getAllOrders() {
@@ -42,12 +41,11 @@ public class OrderService {
     }
 
     public OrderDTO getOrderById(UUID id) throws OrderNotFoundException {
-        Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new OrderNotFoundException("Order not found"));
+        Order order = orderRepository.findById(id).orElseThrow(() -> new OrderNotFoundException("Order not found"));
         return orderMapper.toDTO(order);
     }
 
-    public OrderDTO createOrder(OrderDTO orderDTO) {
+    public OrderDTO createOrder(OrderDTO orderDTO) throws Exception {
         Order order = orderMapper.toEntity(orderDTO);
         order.setCreatedAt(LocalDateTime.now());
         order.setUpdatedAt(LocalDateTime.now());
@@ -56,23 +54,28 @@ public class OrderService {
 
         final Order finalOrder = order;
         List<OrderItem> orderItems = orderDTO.getOrderItems().stream().map(itemDTO -> {
-            ProductDTO product = productServiceClient.getProductById(itemDTO.getId());
+            System.out.println("itemDTO.getId() = " + itemDTO.getId());
+            Optional<ProductDTO> productOptional = productServiceClient.getProductById(itemDTO.getId());
+            System.out.println("productOptional = " + productOptional);
             OrderItem orderItem = new OrderItem();
-            orderItem.setProductId(product.getId());
+            if (productOptional.isEmpty()) {
+                throw new IllegalArgumentException("Product not found");
+            }
+            orderItem.setProductId(productOptional.get().getId());
+            orderItem.setPrice(productOptional.get().getPrice());
             orderItem.setQuantity(itemDTO.getQuantity());
-            orderItem.setPrice(product.getPrice());
             orderItem.setOrder(finalOrder);
             return orderItem;
-        }).toList();
+        }).collect(Collectors.toList());
 
+        order.setOrderItems(orderItems);
         order = orderRepository.save(order);
         orderItemRepository.saveAll(orderItems);
         return orderMapper.toDTO(order);
     }
 
     public OrderDTO updateOrder(UUID id, OrderDTO updatedOrderDTO) throws OrderNotFoundException {
-        Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new OrderNotFoundException("Order not found"));
+        Order order = orderRepository.findById(id).orElseThrow(() -> new OrderNotFoundException("Order not found"));
         order.setStatus(updatedOrderDTO.getStatus());
         order.setTotalPrice(updatedOrderDTO.getTotalPrice());
         order.setUpdatedAt(LocalDateTime.now());
@@ -88,17 +91,13 @@ public class OrderService {
     }
 
     public List<OrderDTO> createAllOrders(List<OrderDTO> orderDTOs) {
-        List<Order> orders = orderDTOs.stream()
-                .map(orderMapper::toEntity)
-                .collect(Collectors.toList());
+        List<Order> orders = orderDTOs.stream().map(orderMapper::toEntity).collect(Collectors.toList());
         LocalDateTime now = LocalDateTime.now();
         orders.forEach(order -> {
             order.setCreatedAt(now);
             order.setUpdatedAt(now);
         });
         orders = orderRepository.saveAll(orders);
-        return orders.stream()
-                .map(orderMapper::toDTO)
-                .collect(Collectors.toList());
+        return orders.stream().map(orderMapper::toDTO).collect(Collectors.toList());
     }
 }
